--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Python para o setor público"
+  title: "Site teste"
   navbar:
     left:
       - href: index.qmd
